implementations/c/ockam/memory/memory.h

struct ockam_memory_t;
typedef struct ockam_memory_t ockam_memory_t;