implementations/rust/c/bindings/src/bindings.rs

#[doc = " @struct  ockam_memory_dispatch_table"]
#[doc = " @brief   The Ockam Memory implementation functions"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ockam_memory_dispatch_table_t {
    #[doc = " @brief   Deinitialize the specified ockam memory object."]
    #[doc = " @param   memory[in]  The ockam memory object to deinitialize."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory received."]
    pub deinit:
        ::core::option::Option<unsafe extern "C" fn(memory: *mut ockam_memory_t) -> ockam_error_t>,
    #[doc = " @brief   Allocate memory from the specified memory module"]
    #[doc = " @param   memory[in]      The ockam memory object to use."]
    #[doc = " @param   buffer[out]     Pointer to a buffer to allocate."]
    #[doc = " @param   buffer_size[in] Buffer size (in bytes) to allocate."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory or buffer received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if buffer_size <=0."]
    pub alloc_zeroed: ::core::option::Option<
        unsafe extern "C" fn(
            memory: *mut ockam_memory_t,
            buffer: *mut *mut ::core::ffi::c_void,
            buffer_size: usize,
        ) -> ockam_error_t,
    >,
    #[doc = " @brief   Free the specified buffer."]
    #[doc = " @param   memory[in]      The ockam memory object to use."]
    #[doc = " @param   buffer[in]      Buffer to free. Must have been allocated from alloc_zeroed()."]
    #[doc = " @param   buffer_size[in] Size of the buffer that was allocated. Must match what was specified in alloc_zeroed()."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory or buffer received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if buffer_size <=0."]
    pub free: ::core::option::Option<
        unsafe extern "C" fn(
            memory: *mut ockam_memory_t,
            buffer: *mut ::core::ffi::c_void,
            buffer_size: usize,
        ) -> ockam_error_t,
    >,
    #[doc = " @brief   Set a set_size number of bytes to the buffer with value"]
    #[doc = " @param   memory[in]    The ockam memory object to use."]
    #[doc = " @param   buffer[out]   The buffer to fill with the specified value."]
    #[doc = " @param   value[in]     The value to set the the buffer with."]
    #[doc = " @param   set_size[in]  The number of bytes to set buffer with value."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory or buffer received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if set_size <=0."]
    pub set: ::core::option::Option<
        unsafe extern "C" fn(
            memory: *mut ockam_memory_t,
            buffer: *mut ::core::ffi::c_void,
            value: u8,
            set_size: usize,
        ) -> ockam_error_t,
    >,
    #[doc = " @brief   Copy data from the source buffer to the destination buffer"]
    #[doc = " @param   memory[in]        The ockam memory object to use."]
    #[doc = " @param   destination[out]  Buffer to place the copied data into. Can not overlap with source."]
    #[doc = " @param   source[in]        Buffer to copy data from."]
    #[doc = " @param   copy_size[in]     Size of data to copy."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory, destination or source received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if copy_size <=0."]
    pub copy: ::core::option::Option<
        unsafe extern "C" fn(
            memory: *mut ockam_memory_t,
            destination: *mut ::core::ffi::c_void,
            source: *const ::core::ffi::c_void,
            copy_size: usize,
        ) -> ockam_error_t,
    >,
    #[doc = " @brief   Move a move_size bytes from source to destination."]
    #[doc = " @param   memory[in]        The ockam memory object to use."]
    #[doc = " @param   destination[out]  Buffer to place the moved data into. May overlap with source."]
    #[doc = " @param   source[in]        Buffer to move data from."]
    #[doc = " @param   move_size[in]     Size of data to move."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory, destination or source received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if move_size <=0."]
    pub move_: ::core::option::Option<
        unsafe extern "C" fn(
            memory: *mut ockam_memory_t,
            destination: *mut ::core::ffi::c_void,
            source: *mut ::core::ffi::c_void,
            move_size: usize,
        ) -> ockam_error_t,
    >,
    #[doc = " @brief   Compare two blocks of memory."]
    #[doc = " @param   memory[in]       The ockam memory object to use."]
    #[doc = " @param   res[out]         Result. <0\tthe first byte that does not match has a lower value in lhs than in rhs."]
    #[doc = "0\tthe contents of both memory blocks are equal."]
    #[doc = ">0\tthe first byte that does not match has a greater value in lhs than in rhs."]
    #[doc = " @param   lhs[in]          Pointer to first block of memory."]
    #[doc = " @param   rhs[in]          Pointer to second block of memory."]
    #[doc = " @param   buffer_size[in]  Size of memory blocks."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory, res, lhs or rhs received."]
    pub compare: ::core::option::Option<
        unsafe extern "C" fn(
            memory: *mut ockam_memory_t,
            res: *mut ::std::os::raw::c_int,
            lhs: *const ::core::ffi::c_void,
            rhs: *const ::core::ffi::c_void,
            buffer_size: usize,
        ) -> ockam_error_t,
    >,
}
#[doc = " @struct  ockam_memory_t"]
#[doc = " @brief   The ockam memory object struct."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ockam_memory_t {
    pub dispatch: *mut ockam_memory_dispatch_table_t,
    pub context: *mut ::core::ffi::c_void,
}
extern "C" {
    pub static OCKAM_VAULT_INTERFACE_ERROR_DOMAIN: *const ::std::os::raw::c_char;
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ockam_error_code_vault_interface_t {
    OCKAM_VAULT_INTERFACE_ERROR_INVALID_PARAM = 1,
}
pub type ockam_vault_t = ockam_vault;
#[repr(u32)]
#[doc = " @enum    ockam_vault_secret_t"]
#[doc = " @brief   Supported secret types for AES and Elliptic Curves."]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ockam_vault_secret_type_t {
    OCKAM_VAULT_SECRET_TYPE_BUFFER = 0,
    OCKAM_VAULT_SECRET_TYPE_AES128_KEY = 1,
    OCKAM_VAULT_SECRET_TYPE_AES256_KEY = 2,
    OCKAM_VAULT_SECRET_TYPE_CURVE25519_PRIVATEKEY = 3,
    OCKAM_VAULT_SECRET_TYPE_P256_PRIVATEKEY = 4,
}
#[repr(u32)]
#[doc = " @enum    ockam_vault_secret_persistence_t"]
#[doc = " @brief   Types of secrets vault can handle."]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ockam_vault_secret_persistence_t {
    OCKAM_VAULT_SECRET_EPHEMERAL = 0,
    OCKAM_VAULT_SECRET_PERSISTENT = 1,
}
#[repr(u32)]
#[doc = " @enum    ockam_vault_secret_purpose_t"]
#[doc = " @brief   Types of uses for a secret"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ockam_vault_secret_purpose_t {
    OCKAM_VAULT_SECRET_PURPOSE_KEY_AGREEMENT = 0,
}
#[doc = " @struct  ockam_vault_secret_attributes_t"]
#[doc = " @brief   Attributes for a specific ockam vault secret."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ockam_vault_secret_attributes_t {
    pub length: u16,
    pub type_: ockam_vault_secret_type_t,
    pub purpose: ockam_vault_secret_purpose_t,
    pub persistence: ockam_vault_secret_persistence_t,
}
#[doc = " @struct  ockam_vault_secret_t"]
#[doc = " @brief   Secret key data for use by Vault"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ockam_vault_secret_t {
    pub attributes: ockam_vault_secret_attributes_t,
    pub context: *mut ::core::ffi::c_void,
}
extern "C" {
    #[doc = " @brief   Deinitialize the specified ockam vault object"]
    #[doc = " @param   vault[in] The ockam vault object to deinitialize."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_deinit(vault: *mut ockam_vault_t) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Generate a random number of desired size."]
    #[doc = " @param   vault[in]       Vault object to use for random number generation."]
    #[doc = " @param   buffer[out]     Buffer containing data to run through SHA-256."]
    #[doc = " @param   buffer_size[in] Size of the data to run through SHA-256."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_random_bytes_generate(
        vault: *mut ockam_vault_t,
        buffer: *mut u8,
        buffer_size: usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Compute a SHA-256 hash based on input data."]
    #[doc = " @param   vault[in]           Vault object to use for SHA-256."]
    #[doc = " @param   input[in]           Buffer containing data to run through SHA-256."]
    #[doc = " @param   input_length[in]    Length of the data to run through SHA-256."]
    #[doc = " @param   digest[out]         Buffer to place the resulting SHA-256 hash in."]
    #[doc = " @param   digest_size[in]     Size of the digest buffer. Must be 32 bytes."]
    #[doc = " @param   digest_length[out]  Amount of data placed in the digest buffer."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_sha256(
        vault: *mut ockam_vault_t,
        input: *const u8,
        input_length: usize,
        digest: *mut u8,
        digest_size: usize,
        digest_length: *mut usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Generate an ockam secret. Attributes struct must specify the configuration for the type of secret to"]
    #[doc = "          generate. For EC keys and AES keys, length is ignored."]
    #[doc = " @param   vault[in]       Vault object to use for generating a secret key."]
    #[doc = " @param   secret[out]     Pointer to an ockam secret object to be populated with the generated secret."]
    #[doc = " @param   attributes[in]  Desired attribtes for the secret to be generated."]
    pub fn ockam_vault_secret_generate(
        vault: *mut ockam_vault_t,
        secret: *mut ockam_vault_secret_t,
        attributes: *const ockam_vault_secret_attributes_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Import the specified data into the supplied ockam vault secret."]
    #[doc = " @param   vault[in]         Vault object to use for generating a secret key."]
    #[doc = " @param   secret[out]       Pointer to an ockam secret object to be populated with input data."]
    #[doc = " @param   attributes[in]    Desired attribtes for the secret being imported."]
    #[doc = " @param   input[in]         Data to load into the supplied secret."]
    #[doc = " @param   input_length[in]  Length of data to load into the secret."]
    pub fn ockam_vault_secret_import(
        vault: *mut ockam_vault_t,
        secret: *mut ockam_vault_secret_t,
        attributes: *const ockam_vault_secret_attributes_t,
        input: *const u8,
        input_length: usize,
    ) -> ockam_error_t;
}
